--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ output
 # Next line commented out, because test/webapp-3.0-virtual-library and
 # test/webapp-3.0-virtual-webapp use it:
 # target
-work
+#work
 build.properties
 mvn.properties
 .checkstyle
